force-app/main/default/objects/Competitor_site__c/Competitor_site__c.object-meta.xml
<CustomObject>
    <description>Competitor outlet centers to replace VRNET

http://intranet.valueretail.com/remerchandising/New%20Schemes/Forms/AllItems.aspx</description>
    <label>Competitor Site</label>
    <nameField>
        <label>Competitor Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>