force-app/main/default/objects/Competitor_site__c/fields/Additional_Site_Captain2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Site_Captain2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Captain 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Competitor_Sites2</relationshipName>
    <type>Lookup</type>
</CustomField>