force-app/main/default/objects/Competitor_site__c/fields/Additional_Site_Captain__c.field-meta.xml
<CustomField>
    <fullName>Additional_Site_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Site Captain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Competitor_Sites1</relationshipName>
    <type>Lookup</type>
</CustomField>