force-app/main/default/objects/Competitor_site__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <label>Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>