force-app/main/default/objects/Competitor_site__c/fields/Annual_Visitors__c.field-meta.xml
<CustomField>
    <fullName>Annual_Visitors__c</fullName>
    <label>Annual Visitors</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>