force-app/main/default/objects/Competitor_site__c/fields/Brand_List__c.field-meta.xml
<CustomField>
    <fullName>Brand_List__c</fullName>
    <inlineHelpText>Enter the website address of the Competitor Site&apos;s Brand list</inlineHelpText>
    <label>Brand List</label>
    <type>Url</type>
</CustomField>