force-app/main/default/objects/Competitor_site__c/fields/Brand_Overlap__c.field-meta.xml
<CustomField>
    <fullName>Brand_Overlap__c</fullName>
    <description>Any brand overlap (e.g. any signed or rumoured crossover brands)</description>
    <inlineHelpText>Any brand overlap (e.g. any signed or rumoured crossover brands)</inlineHelpText>
    <label>Brand Overlap</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>