force-app/main/default/objects/Competitor_site__c/fields/Brand_Overview__c.field-meta.xml
<CustomField>
    <fullName>Brand_Overview__c</fullName>
    <label>Brand Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>