force-app/main/default/objects/Competitor_site__c/fields/Brands_In_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Brands_In_Discussion__c</fullName>
    <label>Brands In Discussion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>