force-app/main/default/objects/Competitor_site__c/fields/Catchment_Area__c.field-meta.xml
<CustomField>
    <fullName>Catchment_Area__c</fullName>
    <label>Catchment Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Area</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>