force-app/main/default/objects/Competitor_site__c/fields/Competition_Factor__c.field-meta.xml
<CustomField>
    <fullName>Competition_Factor__c</fullName>
    <label>Competition Sensitivity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>