force-app/main/default/objects/Competitor_site__c/fields/Competition_Factor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Competition_Factor_Comments__c</fullName>
    <label>Competition Sensitivity Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>