force-app/main/default/objects/Competitor_site__c/fields/Competitor_Site_Link__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Site_Link__c</fullName>
    <formula>&quot;https://valueretail.my.salesforce.com/&quot; &amp; Id</formula>
    <label>Competitor Site Link</label>
    <type>Text</type>
</CustomField>