force-app/main/default/objects/Competitor_site__c/fields/Competitor_to_Village__c.field-meta.xml
<CustomField>
    <fullName>Competitor_to_Village__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor to Village</label>
    <referenceTo>Village__c</referenceTo>
    <relationshipLabel>Competitor Sites</relationshipLabel>
    <relationshipName>Competitor_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>