force-app/main/default/objects/Competitor_site__c/fields/Days_Since_Last_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Site_Visit__c</fullName>
    <formula>Today() -  Last_On_Site_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Site Visit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>