force-app/main/default/objects/Competitor_site__c/fields/Development_Location__c.field-meta.xml
<CustomField>
    <fullName>Development_Location__c</fullName>
    <description>Location of development (within non-compete zone etc..)</description>
    <inlineHelpText>Location of development (within non-compete zone etc..)</inlineHelpText>
    <label>Development Location</label>
    <type>TextArea</type>
</CustomField>