force-app/main/default/objects/Competitor_site__c/fields/Development_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Status__c</fullName>
    <label>Development Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed Full Price</fullName>
            </value>
            <value>
                <fullName>Closed Outlet</fullName>
            </value>
            <value>
                <fullName>Developing Full Price</fullName>
            </value>
            <value>
                <fullName>Developing Outlet</fullName>
            </value>
            <value>
                <fullName>Existing Full Price</fullName>
            </value>
            <value>
                <fullName>Existing Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>