force-app/main/default/objects/Competitor_site__c/fields/Development_Type__c.field-meta.xml
<CustomField>
    <fullName>Development_Type__c</fullName>
    <description>Type of development (e.g. outlet development / hybrid development)</description>
    <inlineHelpText>Type of development (e.g. outlet development / hybrid development)</inlineHelpText>
    <label>Development Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Area</fullName>
            </value>
            <value>
                <fullName>Department Store</fullName>
            </value>
            <value>
                <fullName>Mall</fullName>
            </value>
            <value>
                <fullName>Outlet</fullName>
            </value>
            <value>
                <fullName>Stand alone store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>