force-app/main/default/objects/Competitor_site__c/fields/Distance_From_Village__c.field-meta.xml
<CustomField>
    <fullName>Distance_From_Village__c</fullName>
    <formula>IF( ISBLANK( Site_Coordinates__Latitude__s ) , &quot;No coordinates registered&quot;,   TEXT(ROUND(DISTANCE( Site_Coordinates__c , Competitor_to_Village__r.Village_GeoLocation__c , &quot;km&quot;),1)) &amp; &quot; Km&quot; )</formula>
    <label>Distance From Village</label>
    <type>Text</type>
</CustomField>