force-app/main/default/objects/Competitor_site__c/fields/Distance_from_Village_km__c.field-meta.xml
<CustomField>
    <fullName>Distance_from_Village_km__c</fullName>
    <formula>IF( ISBLANK( Site_Coordinates__Latitude__s ) , 0, 

 
       ROUND(
             DISTANCE( Site_Coordinates__c , Competitor_to_Village__r.Village_GeoLocation__c , &quot;km&quot;)
       ,1)
       
)</formula>
    <label>Distance From Village (km)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>