force-app/main/default/objects/Competitor_site__c/fields/GLA_m2__c.field-meta.xml
<CustomField>
    <fullName>GLA_m2__c</fullName>
    <label>GLA (m²)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>