force-app/main/default/objects/Competitor_site__c/fields/Investor_Crossover__c.field-meta.xml
<CustomField>
    <fullName>Investor_Crossover__c</fullName>
    <description>Any developer or investor crossover</description>
    <inlineHelpText>Any developer or investor crossover</inlineHelpText>
    <label>Investor Crossover</label>
    <type>TextArea</type>
</CustomField>