force-app/main/default/objects/Competitor_site__c/fields/Investors__c.field-meta.xml
<CustomField>
    <fullName>Investors__c</fullName>
    <label>Investor(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>