force-app/main/default/objects/Competitor_site__c/fields/IP_Infringements__c.field-meta.xml
<CustomField>
    <fullName>IP_Infringements__c</fullName>
    <description>Any IP infringements that may have occurred (e.g. use of Village name)</description>
    <inlineHelpText>Any IP infringements that may have occurred (e.g. use of Village name)</inlineHelpText>
    <label>IP Infringements</label>
    <type>TextArea</type>
</CustomField>