force-app/main/default/objects/Competitor_site__c/fields/Last_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Visit__c</fullName>
    <formula>LastActivityDate</formula>
    <inlineHelpText>When was the last site visit held at this site</inlineHelpText>
    <label>Last Site Visit</label>
    <type>Date</type>
</CustomField>