force-app/main/default/objects/Competitor_site__c/fields/Next_On_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Next_On_Site_Visit__c</fullName>
    <inlineHelpText>This field updates when a Competitor Visit record is created</inlineHelpText>
    <label>Next On-Site Visit</label>
    <type>Date</type>
</CustomField>