force-app/main/default/objects/Competitor_site__c/fields/Number_of_Registered_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registered_Stores__c</fullName>
    <description>A count of the Competitor Stores registered against this Site</description>
    <inlineHelpText>A count of the Competitor Stores registered against this Site</inlineHelpText>
    <label>Number of Registered Stores</label>
    <summaryForeignKey>Competitor_Store__c.Competitor_Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>