force-app/main/default/objects/Competitor_site__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>55</length>
    <type>Text</type>
</CustomField>