force-app/main/default/objects/Competitor_site__c/fields/Operator_Company__c.field-meta.xml
<CustomField>
    <fullName>Operator_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent operating company</description>
    <inlineHelpText>The parent operating company, if applicable.</inlineHelpText>
    <label>Competitor Operator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Competitor_Operator</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Sites</relationshipLabel>
    <relationshipName>Competitor_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>