force-app/main/default/objects/Competitor_site__c/fields/Overall_Overview__c.field-meta.xml
<CustomField>
    <fullName>Overall_Overview__c</fullName>
    <label>Overall Overview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>High Street</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Mass Market</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>