force-app/main/default/objects/Competitor_site__c/fields/Priority_level__c.field-meta.xml
<CustomField>
    <fullName>Priority_level__c</fullName>
    <label>Priority level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>