force-app/main/default/objects/Competitor_site__c/fields/Property_Overview__c.field-meta.xml
<CustomField>
    <fullName>Property_Overview__c</fullName>
    <label>Property Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>