force-app/main/default/objects/Competitor_site__c/fields/Site_Captain__c.field-meta.xml
<CustomField>
    <fullName>Site_Captain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Captain</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Competitor_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>