force-app/main/default/objects/Competitor_site__c/fields/Site_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Site_Coordinates__c</fullName>
    <label>Site Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>