force-app/main/default/objects/Competitor_site__c/fields/Site_coordinates_Text__c.field-meta.xml
<CustomField>
    <fullName>Site_coordinates_Text__c</fullName>
    <formula>TEXT( Site_Coordinates__Latitude__s)&amp;&quot; &quot;&amp;TEXT( Site_Coordinates__Longitude__s )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site_coordinates_Text</label>
    <type>Text</type>
</CustomField>