force-app/main/default/objects/Competitor_site__c/fields/Total_Number_of_Visits__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Visits__c</fullName>
    <inlineHelpText>Sum of Site Visits</inlineHelpText>
    <label>Total Number of Visits</label>
    <summaryFilterItems>
        <field>Competitor_Visit__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Site Visit</value>
    </summaryFilterItems>
    <summaryForeignKey>Competitor_Visit__c.Competitor_Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>