force-app/main/default/objects/Competitor_site__c/fields/Transport_to_Site_Other_than_driving__c.field-meta.xml
<CustomField>
    <fullName>Transport_to_Site_Other_than_driving__c</fullName>
    <label>Transport to Site (Other than driving)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Car only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Train</fullName>
            </value>
            <value>
                <fullName>Tube/Undeground</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>