force-app/main/default/objects/Competitor_site__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Developing Full Price</fullName>
            </value>
            <value>
                <fullName>Developing Outlet</fullName>
            </value>
            <value>
                <fullName>Existing Full Price</fullName>
            </value>
            <value>
                <fullName>Existing Outlet</fullName>
            </value>
            <value>
                <fullName>Closed Full Price</fullName>
            </value>
            <value>
                <fullName>Closed Outlet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>