force-app/main/default/objects/Competitor_site__c/fields/Visit_Frequency2__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency2__c</fullName>
    <formula>IF( TEXT(Priority_level__c) == &apos;1&apos;,&apos;8 Weeks&apos;, 

IF( TEXT(Priority_level__c) == &apos;2&apos;,&apos;16 Weeks&apos;, 

IF( TEXT(Priority_level__c) == &apos;3&apos;,&apos;26 Weeks&apos;,&apos;error&apos;

) 

)

)</formula>
    <label>Visit Frequency</label>
    <type>Text</type>
</CustomField>