force-app/main/default/objects/Competitor_site__c/fields/Visit_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Visit_Frequency__c</fullName>
    <label>Visit Frequency</label>
    <length>100</length>
    <type>Text</type>
</CustomField>