force-app/main/default/objects/Competitor_site__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <formula>IF(Next_On_Site_Visit__c - TODAY() = 0, &apos;Due Today&apos;,

IF(  Next_On_Site_Visit__c  - TODAY() &gt; 7, &apos;Pending more than 7 days&apos;, 

IF(  AND(Next_On_Site_Visit__c - TODAY()  &lt;= 7, Next_On_Site_Visit__c  - TODAY() &gt;= 0 ), &apos;Pending less than 7 days&apos;, 

&apos;Overdue&apos;)))</formula>
    <label>Visit Status</label>
    <type>Text</type>
</CustomField>