force-app/main/default/objects/Competitor_site__c/fields/VRNet_ID__c.field-meta.xml
<CustomField>
    <fullName>VRNet_ID__c</fullName>
    <description>The ID of the record when it was on VRNET</description>
    <externalId>true</externalId>
    <label>VRNet ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>