force-app/main/default/objects/Competitor_site__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <inlineHelpText>Enter the website address of the Competitor Site</inlineHelpText>
    <label>Website</label>
    <type>Url</type>
</CustomField>