force-app/main/default/objects/Competitor_site__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Number_of_Visits__c</columns>
    <columns>Priority_level__c</columns>
    <columns>Type__c</columns>
    <columns>Country__c</columns>
    <columns>Competitor_to_Village__c</columns>
    <columns>Distance_from_Village_km__c</columns>
    <columns>Number_of_Registered_Stores__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>