force-app/main/default/objects/Competitor_site__c/listViews/Competitor_Key_Questions_Bicester.listView-meta.xml
<ListView>
    <fullName>Competitor_Key_Questions_Bicester</fullName>
    <columns>NAME</columns>
    <columns>Development_Location__c</columns>
    <columns>Development_Type__c</columns>
    <columns>IP_Infringements__c</columns>
    <columns>Brand_Overlap__c</columns>
    <columns>Investor_Crossover__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_to_Village__c</field>
        <operation>equals</operation>
        <value>Bicester</value>
    </filters>
    <label>Competitor Key Questions - Bicester</label>
</ListView>