force-app/main/default/objects/Competitor_site__c/listViews/Competitor_to_Shanghai.listView-meta.xml
<ListView>
    <fullName>Competitor_to_Shanghai</fullName>
    <columns>NAME</columns>
    <columns>Operator__c</columns>
    <columns>Type__c</columns>
    <columns>Competitor_to_Village__c</columns>
    <columns>Distance_from_Village_km__c</columns>
    <columns>Number_of_Registered_Stores__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_to_Village__c</field>
        <operation>equals</operation>
        <value>Shanghai</value>
    </filters>
    <label>Competitor to Shanghai</label>
</ListView>