force-app/main/default/objects/Competitor_site__c/listViews/Competitor_to_Suzhou.listView-meta.xml
<ListView>
    <fullName>Competitor_to_Suzhou</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Competitor_to_Village__c</columns>
    <columns>Distance_from_Village_km__c</columns>
    <columns>Number_of_Registered_Stores__c</columns>
    <columns>Priority_level__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Competitor_to_Village__c</field>
        <operation>equals</operation>
        <value>Suzhou</value>
    </filters>
    <label>Competitor to Suzhou</label>
    <language>en_US</language>
</ListView>