force-app/main/default/objects/Competitor_site__c/listViews/No_coordinates_registered.listView-meta.xml
<ListView>
    <fullName>No_coordinates_registered</fullName>
    <columns>NAME</columns>
    <columns>Operator__c</columns>
    <columns>Type__c</columns>
    <columns>Competitor_to_Village__c</columns>
    <columns>Distance_From_Village__c</columns>
    <columns>Number_of_Registered_Stores__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Distance_From_Village__c</field>
        <operation>equals</operation>
        <value>No coordinates registered</value>
    </filters>
    <label>No coordinates registered</label>
</ListView>