force-app/main/default/objects/Competitor_site__c/listViews/Overdue_a_Visit.listView-meta.xml
<ListView>
    <fullName>Overdue_a_Visit</fullName>
    <columns>NAME</columns>
    <columns>Competitor_to_Village__c</columns>
    <columns>Site_Captain__c</columns>
    <columns>Additional_Site_Captain__c</columns>
    <columns>Last_On_Site_Visit__c</columns>
    <columns>Next_On_Site_Visit__c</columns>
    <filterScope>Everything</filterScope>
    <label>Overdue a Visit</label>
    <language>en_US</language>
</ListView>